added maps to my html pages

--- a/pages/cloudburst.html
+++ b/pages/cloudburst.html
@@ -27,6 +27,15 @@
     <div id='map'>
       <!-- map goes here -->
     </div>
+    <div id='address'>
+      <ul>
+        <li>Address:</li>
+        <li>City, state, zip</li>
+        <li>Hours</li>
+        <li>Phone</li>
+        <li>email</li>
+      </ul>
+    </div>
     <div id='social'>
       <!-- Web page -->
       <!-- Facebook -->
