--- a/pages/cloudburst.html
+++ b/pages/cloudburst.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Seattle Brewery Finder</title>
+  <title>Cloudburst Brewing</title>
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
@@ -25,23 +25,29 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
     </div>
     <div id='map'>
-      <!-- map goes here -->
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10758.996016614912!2d-122.345288!3d47.61157!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb68c7cbc1350f26a!2sCloudburst+Brewing!5e0!3m2!1sen!2sus!4v1519277414809" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div id='address'>
       <ul>
-        <li>Address:</li>
-        <li>City, state, zip</li>
-        <li>Hours</li>
-        <li>Phone</li>
-        <li>email</li>
+        <li>2116 Western Avenue</li>
+        <li>Seattle, WA 98121</li>
+        <ul>
+          <li>Monday - Tuesday: Closed</li>
+          <li>Wednesday - Friday: 2pm - 10pm</li>
+          <li>Saturday: 12pm - 10pm</li>
+          <li>Sunday: 12pm - 8pm</li>
+        </ul>
+        <li>206-602-6061</li>
+        <li>info@cloudburstbrew.com</li>
       </ul>
     </div>
     <div id='social'>
-      <!-- Web page -->
-      <!-- Facebook -->
-      <!-- Twitter -->
-      <!-- Instagram -->
-      <!-- Untappd -->
+        <ul>
+          <li><a href='http://www.cloudburstbrew.com/'><img src='' alt='standard logo'/>Cloudburst Brewing Website</a></li>
+          <li><a href='https://www.facebook.com/cloudburstbrewing'><img src='' alt='facebook logo'/>Facebook</a></li>
+          <li><a href='https://twitter.com/cloudburst_brew'><img src='' alt='twitter logo'/>Twitter</a></li>
+          <li><a href='https://www.instagram.com/cloudburstbrew/'><img src='' alt='instagram logo'/>Instagram</a></li>
+          <li><a href='https://untappd.com/CloudburstBrewing'><img src='' alt='untappd logo'/>Untappd</a></li>
     </div>
   </section>
   <footer>
