second brewery done

--- a/pages/hellbent.html
+++ b/pages/hellbent.html
@@ -20,7 +20,7 @@
   </header>
   <section>
     <div id='breweryInfo'>
-        <img src="images/brewImages/hell.jpg" alt="Hellbent Brewery">
+        <img src="../images/brewImages/hell.jpg" alt="Hellbent Brewery" width="300">
       <h2>Hellbent Brewery</h2>
       <p>Hellbent Brewery is a place that takes the art of brewery to the next level.  Founded by four friends, Hellbent offers a variety of drinks; from their own explicit blends, to over a dozen of local beers on tap.  Whether it's wine, cider, beer or an original brew, Hellbent is the place to sit and drink with friends, or make new ones.</p>
     </div>
