added some images for the sotres i was working on and added some images to my brewery pages

--- a/pages/fremont.html
+++ b/pages/fremont.html
@@ -38,15 +38,15 @@
       </div>
     <div id='social'>
       <!-- Web page -->
-      <li><a href="https://www.fremontbrewing.com/welcome/"><img src="" alt="Fremont Brewing logo">Website</a></li>
+      <li><a href="https://www.fremontbrewing.com/welcome/"><img src="..\images\brewImages\FBC-Fremont-Brewing-4C-logo.jpg" alt="Fremont Brewing logo">Website</a></li>
       <!-- Facebook -->
-      <li><a href="https://www.facebook.com/pages/Fremont-Brewing-Company/128777587151652"><img src="" alt="facebook logo">Facebook</a></li>
+      <li><a href="https://www.facebook.com/pages/Fremont-Brewing-Company/128777587151652"><img src="..\images\icons\facebook.png" alt="facebook logo">Facebook</a></li>
       <!-- Twitter -->
-      <li><a href=""><img src="https://twitter.com/fremontbrewing" alt="twitter logo">Twitter</a></li>
+      <li><a href="https://twitter.com/fremontbrewing"><img src="..\images\icons\twitter.png" alt="twitter logo">Twitter</a></li>
       <!-- Instagram -->
-      <li><a href="https://www.instagram.com/fremontbrewing/"><img src="" alt="instagram logo">Instagram</a></li>
+      <li><a href="https://www.instagram.com/fremontbrewing/"><img src="..\images\icons\instagram.png" alt="instagram logo">Instagram</a></li>
       <!-- Untappd -->
-      <li><a href="https://untappd.com/fremontbrewing"><img src="" alt="untappd logo">Untappd</a></li>
+      <li><a href="https://untappd.com/fremontbrewing"><img src="..\images\icons\untappd.png" alt="untappd logo">Untappd</a></li>
     </div>
   </section>
   <footer>
