--- a/pages/holymt.html
+++ b/pages/holymt.html
@@ -43,15 +43,15 @@
       </div>
     <div id='social'>
       <!-- Web page -->
-      <li><a href="https://holymountainbrewing.com/#"><img src="" alt="holy mtn logo">Website</a></li>
+      <li><a href="https://holymountainbrewing.com/#"><img src="..\images\brewImages\holyMountain_logo.png" alt="holy mtn logo">Website</a></li>
       <!-- Facebook -->
-      <li><a href="https://www.facebook.com/HolyMountainBrewing/"><img src="" alt="facebook logo">Facebook</a></li>
+      <li><a href="https://www.facebook.com/HolyMountainBrewing/"><img src="..\images\icons\facebook.png" alt="facebook logo">Facebook</a></li>
       <!-- Twitter -->
-      <li><a href="https://twitter.com/holymtnbrewing"><img src="" alt="twitter logo">Twitter</a></li>
+      <li><a href="https://twitter.com/holymtnbrewing"><img src="..\images\icons\twitter.png" alt="twitter logo">Twitter</a></li>
       <!-- Instagram -->
-      <li><a href="https://www.instagram.com/holymtnbrewing/"><img src="" alt="instagram logo">Instagram</a></li>
+      <li><a href="https://www.instagram.com/holymtnbrewing/"><img src="..\images\icons\instagram.png" alt="instagram logo">Instagram</a></li>
       <!-- Untappd -->
-      <li><a href="https://untappd.com/HolyMountainBrewing"><img src="" alt="utappd logo">Untappd</a></li>
+      <li><a href="https://untappd.com/HolyMountainBrewing"><img src="..\images\icons\untappd.png" alt="untappd logo">Untappd</a></li>
     </div>
   </section>
   <footer>
