--- a/pages/peddler.html
+++ b/pages/peddler.html
@@ -47,15 +47,15 @@
     <div id='social'>
       <ul>
         <!-- Web page -->
-        <li><a href="https://www.peddlerbrewing.com/"><img src="" alt="Peddler brewery logo">Peddler Brewery</a></li>
+        <li><a href="https://www.peddlerbrewing.com/"><img src="..\images\brewImages\peddler.png" alt="Peddler brewery logo">Peddler Brewery</a></li>
         <!-- Facebook -->
-        <li><a href="https://www.facebook.com/PeddlerBrewing"><img src="" alt="facebook logo">Facebook</a></li>
+        <li><a href="https://www.facebook.com/PeddlerBrewing"><img src="..\images\icons\facebook.png" alt="facebook logo">Facebook</a></li>
         <!-- Twitter -->
-        <li><a href="https://twitter.com/PeddlerBrewing"><img src="" alt="twitter logo">Twitter</a></li>
+        <li><a href="https://twitter.com/PeddlerBrewing"><img src="..\images\icons\twitter.png" alt="twitter logo">Twitter</a></li>
         <!-- Instagram -->
-        <li><a href="https://www.instagram.com/peddlerbrewing/"><img src="" alt="instagram logo">Instagram</a></li> 
+        <li><a href="https://www.instagram.com/peddlerbrewing/"><img src="..\images\icons\instagram.png" alt="instagram logo">Instagram</a></li>
         <!-- Untappd -->
-        <li><a href="https://untappd.com/PeddlerBrewing"><img src="" alt="untappd logo">Untappd</a></li>
+        <li><a href="https://untappd.com/PeddlerBrewing"><img src="..\images\icons\untappd.png" alt="untappd logo">Untappd</a></li>
       </ul>
     </div>
   </section>
