--- a/index.html
+++ b/index.html
@@ -65,5 +65,7 @@
   <footer>
       <p>&copy Seattle Brewery Finders</p>
   </footer>
+  <script src='app.js' type='text/javascript'></script>
+
 </body>
 </html>
