continuing work on css and html

--- a/pages/standard.html
+++ b/pages/standard.html
@@ -48,8 +48,8 @@
         </ul>
       </div>
   </section>
-  <footer>
-    <p>&copy Seattle Brewery Finders</p>
-  </footer>
+  <!-- <footer>
+    &copy Seattle Brewery Finders
+  </footer> -->
 </body>
 </html>
