--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Peddler Brewing</title>
+  <title>About Us</title>
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="../css/aboutUs.css" />
 </head>
 <body>
   <header>
@@ -20,48 +21,77 @@
   </header>
   <main>
     <div id="group">
-      <h2>About the Team behind Seattle Brewery Finder!</h2>
-      <img src= "http://via.placeholder.com/350x150">
+      <h2>The Team behind Seattle Brewery Finder!</h2>
+      <img src= "http://via.placeholder.com/720x360">
       <p>Meet the masterminds responsible for giving you a good time!</p>
     </div>
     <div class="masterminds">
-      <img id="name" src= "http://via.placeholder.com/350x150">
-      <h3>Name</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
-      <h4>Favorite Beer: </h4>
-      <h4>Favorite Brewery: </h4>
+      <img id="name" src= "http://via.placeholder.com/200x300">
+      <div class="bio">
+        <h3>Name</h3>
+        <div class="contact">
+          <h4>Phone: </h4>
+          <h4>Email: </h4>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
+        <h4>Favorite Beer: </h4>
+        <h4>Favorite Brewery: </h4>
+      </div>
     </div>
     <div class="masterminds">
-      <img id="name" src= "http://via.placeholder.com/350x150">
-      <h3>Name</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
-      <h4>Favorite Beer: </h4>
-      <h4>Favorite Brewery: </h4>
+      <img id="name" src= "http://via.placeholder.com/200x300">
+      <div class="bio">
+        <h3>Name</h3>
+        <div class="contact">
+          <h4>Phone: </h4>
+          <h4>Email: </h4>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
+        <h4>Favorite Beer: </h4>
+        <h4>Favorite Brewery: </h4>
+      </div>
     </div>
     <div class="masterminds">
-      <img id="name" src= "http://via.placeholder.com/350x150">
-      <h3>Name</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
-      <h4>Favorite Beer: </h4>
-      <h4>Favorite Brewery: </h4>
+      <img id="name" src= "http://via.placeholder.com/200x300">
+      <div class="bio">
+        <h3>Name</h3>
+        <div class="contact">
+          <h4>Phone: </h4>
+          <h4>Email: </h4>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
+        <h4>Favorite Beer: </h4>
+        <h4>Favorite Brewery: </h4>
+      </div>
     </div>
     <div class="masterminds">
-      <img id="name" src= "http://via.placeholder.com/350x150">
-      <h3>Name</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
-      <h4>Favorite Beer: </h4>
-      <h4>Favorite Brewery: </h4>
+      <img id="name" src= "http://via.placeholder.com/200x300">
+      <div class="bio">
+        <h3>Name</h3>
+        <div class="contact">
+          <h4>Phone: </h4>
+          <h4>Email: </h4>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
+        <h4>Favorite Beer: </h4>
+        <h4>Favorite Brewery: </h4>
+      </div>
     </div>
     <div class="masterminds">
-      <img id="name" src= "http://via.placeholder.com/350x150">
-      <h3>Name</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
-      <h4>Favorite Beer: </h4>
-      <h4>Favorite Brewery: </h4>
-    </div>
+      <img id="name" src= "http://via.placeholder.com/200x300">
+      <div class="bio">
+        <h3>Name</h3>
+        <div class="contact">
+          <h4>Phone: </h4>
+          <h4>Email: </h4>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
+        <h4>Favorite Beer: </h4>
+        <h4>Favorite Brewery: </h4>
+      </div>
   </main>
-  <footer>
+  <!-- <footer>
     <p>&copy Seattle Brewery Finders</p>
-  </footer>
+  </footer> -->
 </body>
 </html>
