more html work done, added a little more css

--- a/pages/fremont.html
+++ b/pages/fremont.html
@@ -21,8 +21,10 @@
   <section>
     <div id='breweryInfo'>
       <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
-      <h2>Cloudburst Brewing</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
+      <h2>Fremont Brewing</h2>
+      <p>This family-owned brewery started in 2009 by founder Matt Lincecum.
+          The Fremont's goal is to promote the history of Fremont area as well as provide beer made of the finest ingredients.
+          They have an active role in their community and offer some refreshing, award winning beverages.</p>
     </div>
     <div id='social'>
       <ul>
@@ -45,8 +47,8 @@
         </ul>
       </div>
   </section>
-  <!-- <footer>
+  <footer>
     <p>&copy Seattle Brewery Finders</p>
-  </footer> -->
+  </footer>
 </body>
 </html>
