--- a/pages/optimism.html
+++ b/pages/optimism.html
@@ -24,9 +24,17 @@
       <h2>Optimism Brewing</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
     </div>
+    <div id='social'>
+        <ul>
+            <li><a href="http://optimismbrewing.com/">Optimism Brewing Website</a></li>
+            <li><a href="https://www.facebook.com/OptimismBrewing"><img src='../images/icons/facebook.png' alt='facebook logo'/>-Facebook</a></li>
+            <li><a href="https://twitter.com/OptimismBrewing"><img src='../images/icons/twitter.png' alt='twitt logo'/>-Twitter</a></li>
+            <li><a href="https://www.instagram.com/optimismbrewing/"><img src='../images/icons/instagram.png' alt='instagram logo'/>-Instagram</a></li>
+            <li><a href="https://untappd.com/OptimismBrewing"><img src='../images/icons/untappd.png' alt='untappd logo'/>-Untappd</a></li>
+        </ul>
+    </div>
     <div id='map'>
-      <!-- map goes here -->
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2689.6857430442633!2d-122.32272138436922!3d47.61279997918503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906acc07f09b89%3A0xaec46580d07fc936!2sOptimism+Brewing+Company!5e0!3m2!1sen!2sus!4v1519276421081" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2689.6857430442633!2d-122.32272138436922!3d47.61279997918503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906acc07f09b89%3A0xaec46580d07fc936!2sOptimism+Brewing+Company!5e0!3m2!1sen!2sus!4v1519276421081" width="900" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div id='address'>
         <ul>
@@ -45,20 +53,6 @@
             <li>(206) 651-5429</li>
             <li><a href="mailto:contact@optimismbrewing.com">contact@optimismbrewing.com. </a></li>
         </ul>
-    </div>
-    <div id='social'>
-        <ul>
-            <li><a href="http://optimismbrewing.com/">Optimism Brewing Website</a></li>
-            <li><a href="https://www.facebook.com/OptimismBrewing">Optimism Brewing Facebook</a></li>
-            <li><a href="https://twitter.com/OptimismBrewing">Optimism Brewing Twitter</a></li>
-            <li><a href="https://www.instagram.com/optimismbrewing/">Optimism Brewing Instagram</a></li>
-            <li><a href="https://untappd.com/OptimismBrewing">Optimism Brewing Untappd</a></li>
-        </ul>
-      <!-- Web page -->
-      <!-- Facebook -->
-      <!-- Twitter -->
-      <!-- Instagram -->
-      <!-- Untappd -->
     </div>
   </section>
   <footer>
