--- a/pages/outlander.html
+++ b/pages/outlander.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Seattle Brewery Finder</title>
+  <title>Outlander Brewing</title>
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
@@ -21,11 +21,20 @@
   <section>
     <div id='breweryInfo'>
         <img src="../images/brewImages/outlanderlogo.jpg" alt="Outlander Brewing" width="300">
-      <h2>Populuxe Brewing</h2>
+      <h2>Outlander Brewing</h2>
       <p>Founded by co-ownwers Peter and Amy. Populuxe Brewing is the culmination of the dedication of home brewed beer that outgrew its space.  Within months of success, Populuxe Brewing is a nice small place with limited home-brewed beers.</p>
     </div>
+    <div id='social'>
+      <ul>
+        <li><a href='http://www.outlander.com/'>Outlander Brewing Website</a></li>
+        <li><a href='https://www.facebook.com/OUTLANDERBREW/'><img src='../images/icons/facebook.png' alt='facebook logo'/>-Facebook</a></li>
+        <li><a href='https://twitter.com/outlanderbrew'><img src='../images/icons/twitter.png' alt='twitter logo'/>-Twitter</a></li>
+        <li><a href='https://www.instagram.com/outlanderbrewing/'><img src='../images/icons/instagram.png' alt='instagram logo'/>-Instagram</a></li>
+        <li><a href='https://untappd.com/OutlanderBrewery'><img src='../images/icons/untappd.png' alt='untappd logo'/>-Untappd</a></li>
+      </ul>
+    </div>
     <div id='map'>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.6527931589885!2d-122.35775568454201!3d47.65231359281249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549015a9b05a35d7%3A0x467c8ea9869faa86!2sOutlander+Brewery+and+Pub!5e0!3m2!1sen!2sus!4v1519352783737" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.6527931589885!2d-122.35775568454201!3d47.65231359281249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549015a9b05a35d7%3A0x467c8ea9869faa86!2sOutlander+Brewery+and+Pub!5e0!3m2!1sen!2sus!4v1519352783737" width="900" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div id="address">
         <ul>
@@ -44,13 +53,6 @@
           <li>Email: Outlanderbrewing@gmail.com</li>
         </ul>
       </div>
-    <div id='social'>
-      <!-- Web page -->
-      <!-- Facebook -->
-      <!-- Twitter -->
-      <!-- Instagram -->
-      <!-- Untappd -->
-    </div>
   </section>
   <footer>
     <p>&copy Seattle Brewery Finders</p>
