--- a/pages/cloudburst.html
+++ b/pages/cloudburst.html
@@ -50,8 +50,8 @@
       </ul>
     </div>
   </section>
-  <!-- <footer>
+  <footer>
     <p>&copy Seattle Brewery Finders</p>
-  </footer> -->
+  </footer>
 </body>
 </html>
