--- a/pages/hellbent.html
+++ b/pages/hellbent.html
@@ -51,8 +51,8 @@
         </ul>
       </div>
   </section>
-  <!-- <footer>
+  <footer>
     <p>&copy Seattle Brewery Finders</p>
-  </footer> -->
+  </footer>
 </body>
 </html>
