finished brewery html styling

--- a/pages/ravenna.html
+++ b/pages/ravenna.html
@@ -24,9 +24,17 @@
       <h2>Ravenna Brewing</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
     </div>
+    <div id='social'>
+        <ul>
+            <li><a href="http://www.ravennabrewing.com">Ravenna Brewing Website</a></li>
+            <li><a href="https://www.facebook.com/RavennaBrewing/"><img src="../images/icons/facebook.png" alt="facebook logo">-Facebook</a></li>
+            <li><a href="https://twitter.com/RavennaBrewing"><img src="../images/icons/twitter.png" alt="twitter logo">-Twitter</a></li>
+            <li><a href="hhttp://instagram.com/ravennabrewing"><img src="../images/icons/instagram.png" alt="instagram logo">-Instagram</a></li>
+            <li><a href="https://untappd.com/RavennaBrewingCo"><img src="../images/icons/untappd.png" alt="untappd logo">-Untappd</a></li>
+        </ul>
+    </div>
     <div id='map'>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10747.332525048134!2d-122.299239!3d47.668238!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb05b7c95104313ec!2sRavenna+Brewing+Co!5e0!3m2!1sen!2sus!4v1519275905013" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-      <!-- map goes here -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10747.332525048134!2d-122.299239!3d47.668238!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb05b7c95104313ec!2sRavenna+Brewing+Co!5e0!3m2!1sen!2sus!4v1519275905013" width="900" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div id='address'>
         <ul>
@@ -45,20 +53,6 @@
                 </ul>
             <li>Phone: (206) 743-8450</li>
         </ul>
-    </div>
-    <div id='social'>
-        <ul>
-            <li><a href="http://www.ravennabrewing.com">Ravenna Brewing Website</a></li>
-            <li><a href="https://www.facebook.com/RavennaBrewing/">Ravenna Brewing Facebook</a></li>
-            <li><a href="https://twitter.com/RavennaBrewing">Ravenna Brewing Twitter</a></li>
-            <li><a href="hhttp://instagram.com/ravennabrewing">Ravenna Brewing Instagram</a></li>
-            <li><a href="https://untappd.com/RavennaBrewingCo">Ravenna Brewing Untappd</a></li>
-        </ul>
-      <!-- Web page -->
-      <!-- Facebook -->
-      <!-- Twitter -->
-      <!-- Instagram -->
-      <!-- Untappd -->
     </div>
   </section>
   <footer>
