--- a/pages/twobeers.html
+++ b/pages/twobeers.html
@@ -24,8 +24,16 @@
       <h2>Two Beers Brewing Company</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
     </div>
+    <div id='social'>
+      <ul>
+        <li><a href='https://www.twobeersbrewery.com/'>Two Beers Website</a></li>
+        <li><a href='https://www.facebook.com/TwoBeersBrewing/'><img src='../images/icons/facebook.png' alt='facebook logo'/>-Facebook</a></li>
+        <li><a href='https://twitter.com/TwoBeersBrewing'><img src='../images/icons/twitter.png' alt='twitter logo'/>-Twitter</a></li>
+        <li><a href='https://www.instagram.com/twobeersbrewing/'><img src='../images/icons/instagram.png' alt='instagram logo'/>-Instagram</a></li>
+        <li><a href='https://untappd.com/TwoBeersBrewingCo'><img src='../images/icons/untappd.png' alt='untappd logo'/>-Untappd</a></li>
+    </div>
     <div id='map'>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10769.486545399284!2d-122.3374981!3d47.5605572!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3104a9e1599981e1!2sTwo+Beers+Brewing+Co.!5e0!3m2!1sen!2sus!4v1519275835116" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10769.486545399284!2d-122.3374981!3d47.5605572!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3104a9e1599981e1!2sTwo+Beers+Brewing+Co.!5e0!3m2!1sen!2sus!4v1519275835116" width="900" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div id='address'>
         <ul>
@@ -41,14 +49,6 @@
           <li>206-762-0490</li>
         </ul>
       </div>
-    <div id='social'>
-      <ul>
-        <li><a href='https://www.twobeersbrewery.com/'><img src='' alt='standard logo'/>Two Beers Brewing Company Website</a></li>
-        <li><a href='https://www.facebook.com/TwoBeersBrewing/'><img src='' alt='facebook logo'/>Facebook</a></li>
-        <li><a href='https://twitter.com/TwoBeersBrewing'><img src='' alt='twitter logo'/>Twitter</a></li>
-        <li><a href='https://www.instagram.com/twobeersbrewing/'><img src='' alt='instagram logo'/>Instagram</a></li>
-        <li><a href='https://untappd.com/TwoBeersBrewingCo'><img src='' alt='untappd logo'/>Untappd</a></li>
-    </div>
   </section>
   <footer>
     <p>&copy Seattle Brewery Finders</p>
