--- a/pages/populuxe.html
+++ b/pages/populuxe.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Seattle Brewery Finder</title>
+  <title>Populuxe Brewing</title>
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
@@ -24,8 +24,17 @@
       <h2>Populuxe Brewing</h2>
       <p>Founded by co-ownwers Peter and Amy. Populuxe Brewing is the culmination of the dedication of home brewed beer that outgrew its space.  Within months of success, Populuxe Brewing is a nice small place with limited home-brewed beers.</p>
     </div>
+    <div id='social'>
+      <ul>
+        <li><a href="https://www.populuxebrewing.com/">Populuxe Brewing Website</a></li>
+        <li><a href="https://www.facebook.com/PopuluxeBrewing/"><img src="../images/icons/facebook.png" alt="facebook logo">-Facebook</a></li>
+        <li><a href="https://twitter.com/PopuluxeBrewing"><img src="../images/icons/twitter.png" alt="twitter logo">-Twitter</a></li>
+        <li><a href="https://www.instagram.com/populuxebrewing/"><img src="../images/icons/instagram.png" alt="instagram logo">-Instagram</a></li> 
+        <li><a href="https://untappd.com/PopuluxeBrewing"><img src="../images/icons/untappd.png" alt="untappd logo">-Untappd</a></li>
+      </ul>
+    </div>
     <div id='map'>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10748.103980485528!2d-122.3680496!3d47.6644914!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x91db7bede81e8387!2sPopuluxe+Brewing!5e0!3m2!1sen!2sus!4v1519277637606" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10748.103980485528!2d-122.3680496!3d47.6644914!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x91db7bede81e8387!2sPopuluxe+Brewing!5e0!3m2!1sen!2sus!4v1519277637606" width="900" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div id="address">
         <ul>
@@ -42,13 +51,6 @@
           <li>Email: populuxebrewing.com</li>
         </ul>
       </div>
-    <div id='social'>
-      <!-- Web page -->
-      <!-- Facebook -->
-      <!-- Twitter -->
-      <!-- Instagram -->
-      <!-- Untappd -->
-    </div>
   </section>
   <footer>
     <p>&copy Seattle Brewery Finders</p>
