--- a/pages/reubens.html
+++ b/pages/reubens.html
@@ -24,27 +24,27 @@
       <h2>Reuben's Brews</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
     </div>
+    <div id='social'>
+        <ul>
+          <li><a href='http://www.reubensbrews.com/'>Reuben's Brews Website</a></li>
+          <li><a href='https://www.facebook.com/Reubensbrews/'><img src='../images/icons/facebook.png' alt='facebook logo'/>-Facebook</a></li>
+          <li><a href='https://twitter.com/Reubensbrews'><img src='../images/icons/twitter.png' alt='twitter logo'/>-Twitter</a></li>
+          <li><a href='https://www.instagram.com/reubensbrews/'><img src='../images/icons/instagram.png' alt='instagram logo'/>-Instagram</a></li>
+          <li><a href='https://untappd.com/ReubensBrews'><img src='../images/icons/untappd.png' alt='untappd logo'/>-Untappd</a></li>
+      </div>
     <div id='map'>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10747.917328971093!2d-122.3730986!3d47.6653979!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x90d7c5a5e5dcf1ab!2sReuben&#39;s+Brews!5e0!3m2!1sen!2sus!4v1519276552356" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10747.917328971093!2d-122.3730986!3d47.6653979!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x90d7c5a5e5dcf1ab!2sReuben&#39;s+Brews!5e0!3m2!1sen!2sus!4v1519276552356" width="900" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div id='address'>
-        <ul>
-          <li>5010 14th Ave NW</li>
-          <li>Seattle, WA  98107</li>
-          <ul>
-            <li>Daily: 11am - 10pm</li>
-          </ul>
-          <li>206-784-2859</li>
-          <li>reubensbrews@gmail.com</li>
-        </ul>
-      </div>
-    <div id='social'>
       <ul>
-        <li><a href='http://www.reubensbrews.com/'><img src='' alt='standard logo'/>Reuben's Brews Website</a></li>
-        <li><a href='https://www.facebook.com/Reubensbrews/'><img src='' alt='facebook logo'/>Facebook</a></li>
-        <li><a href='https://twitter.com/Reubensbrews'><img src='' alt='twitter logo'/>Twitter</a></li>
-        <li><a href='https://www.instagram.com/reubensbrews/'><img src='' alt='instagram logo'/>Instagram</a></li>
-        <li><a href='https://untappd.com/ReubensBrews'><img src='' alt='untappd logo'/>Untappd</a></li>
+        <li>5010 14th Ave NW</li>
+        <li>Seattle, WA  98107</li>
+        <ul>
+          <li>Daily: 11am - 10pm</li>
+        </ul>
+        <li>206-784-2859</li>
+        <li>reubensbrews@gmail.com</li>
+      </ul>
     </div>
   </section>
   <footer>
