--- a/pages/urbanfam.html
+++ b/pages/urbanfam.html
@@ -24,38 +24,31 @@
       <h2>Urban Family Brewing</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
     </div>
+    <div id='social'>
+        <ul>
+            <li><a href="http://www.urbanfamilybrewing.com/">Urban Family Website</a></li>
+            <li><a href="https://www.facebook.com/pages/Urban-Family-Brewing/259194390839354"><img src="../images/icons/facebook.png" alt="facebook logo">-Facebook</a></li>
+            <li><a href="https://twitter.com/urbanfambrewing?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="../images/icons/twitter.png" alt="twitter logo">-Twitter</a></li>
+            <li><a href="https://www.instagram.com/urbanfamilybrewing/?hl=en"><img src="../images/icons/instagram.png" alt="instagram logo">-Instagram</a></li>
+            <li><a href="https://untappd.com/UrbanFamilyBrewing"><img src="../images/icons/untappd.png" alt="untappd logo">Urban Family Brewing Untappd</a></li>
+        </ul>
+    </div>
     <div id='map'>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.2255502665435!2d-122.39247838413733!3d47.66061457918837!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549015c65bb6b3bf%3A0x741bed57aed7bc5e!2sUrban+Family+Brewing+Co.!5e0!3m2!1sen!2sus!4v1519276478011" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-      <!-- map goes here -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.2255502665435!2d-122.39247838413733!3d47.66061457918837!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549015c65bb6b3bf%3A0x741bed57aed7bc5e!2sUrban+Family+Brewing+Co.!5e0!3m2!1sen!2sus!4v1519276478011" width="900" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div id='address'>
-        <ul>
-            <li>4441 26th Ave W Suite A</li>
-                <li>Seattle, WA 98199</li>
-                <li>hours:</li>
-                    <ul id=hours>
-                        <li>Monday - Thursday: 4pm-9pm</li>
-                        <li>Friday   4pm-10pm</li>
-                        <li>Saturday  12pm-10pm</li>
-                    </ul>
-            <li>Phone: (206) 861-6769 </li>
-            <li><a href="mailto:info@urbanfamilybrewing.com">info@urbanfamilybrewing.com </a></li>
-        </div>
-        <div id='social'>
-                <ul>
-                        <li><a href="http://www.urbanfamilybrewing.com/">Urban Family Brewing Website</a></li>
-                        <li><a href="https://www.facebook.com/pages/Urban-Family-Brewing/259194390839354">Urban Family Brewing Facebook</a></li>
-                        <li><a href="https://twitter.com/urbanfambrewing?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Urban Family Brewing Twitter</a></li>
-                        <li><a href="https://www.instagram.com/urbanfamilybrewing/?hl=en">Urban Family Brewing Instagram</a></li>
-                        <li><a href="https://untappd.com/UrbanFamilyBrewing">Urban Family Brewing Untappd</a></li>
-                    </ul>
-            <!-- Web page -->
-            <!-- Facebook -->
-            <!-- Twitter -->
-            <!-- Instagram -->
-            <!-- Untappd -->
-          
-              </div>
+    <ul>
+        <li>4441 26th Ave W Suite A</li>
+            <li>Seattle, WA 98199</li>
+            <li>hours:</li>
+                <ul id=hours>
+                    <li>Monday - Thursday: 4pm-9pm</li>
+                    <li>Friday   4pm-10pm</li>
+                    <li>Saturday  12pm-10pm</li>
+                </ul>
+        <li>Phone: (206) 861-6769 </li>
+        <li><a href="mailto:info@urbanfamilybrewing.com">info@urbanfamilybrewing.com </a></li>
+    </div>
   </section>
   <footer>
     <p>&copy Seattle Brewery Finders</p>
