fixed urban family untappd link

--- a/pages/urbanfam.html
+++ b/pages/urbanfam.html
@@ -30,7 +30,7 @@
             <li><a href="https://www.facebook.com/pages/Urban-Family-Brewing/259194390839354"><img src="../images/icons/facebook.png" alt="facebook logo">-Facebook</a></li>
             <li><a href="https://twitter.com/urbanfambrewing?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="../images/icons/twitter.png" alt="twitter logo">-Twitter</a></li>
             <li><a href="https://www.instagram.com/urbanfamilybrewing/?hl=en"><img src="../images/icons/instagram.png" alt="instagram logo">-Instagram</a></li>
-            <li><a href="https://untappd.com/UrbanFamilyBrewing"><img src="../images/icons/untappd.png" alt="untappd logo">Urban Family Brewing Untappd</a></li>
+            <li><a href="https://untappd.com/UrbanFamilyBrewing"><img src="../images/icons/untappd.png" alt="untappd logo">-Untappd</a></li>
         </ul>
     </div>
     <div id='map'>
