added descriptions from Tyler

--- a/pages/optimism.html
+++ b/pages/optimism.html
@@ -22,7 +22,7 @@
     <div id='breweryInfo'>
       <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
       <h2>Optimism Brewing</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
+      <p>Located in the Capital Hill area of Seattle Optimism brewing boasts 16,000 square feet just for beer.  Opened by husband and wife team Troy Hakala and Gay Gilmore in 2015 it has proven to have staying power.  They do not have food, but sometimes there are food trucks in the courtyard and they let you get food delivered.  Bring your credit cards because Optimism has a “no cash, no tip” policy and all of there workers get paid a living wage.  Optimism hosts an array of meet ups and other events.</p>
     </div>
     <div id='social'>
         <ul>
