--- a/pages/ravenna.html
+++ b/pages/ravenna.html
@@ -22,7 +22,7 @@
     <div id='breweryInfo'>
       <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
       <h2>Ravenna Brewing</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
+      <p>With a rotating stock of ales this Ravenna neighborhood gem is a hit for the locals.  It’s a nice cozy brewery nestled next to an auto body shop.  Owner Tommy Ortega poured his famous Lion Tamer bourbon vanilla porter on opening night in April 2016.  </p>
     </div>
     <div id='social'>
         <ul>
