--- a/pages/urbanfam.html
+++ b/pages/urbanfam.html
@@ -22,7 +22,7 @@
     <div id='breweryInfo'>
       <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
       <h2>Urban Family Brewing</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
+      <p>Serving mainly French and Belgian farmhouse styles with Pacific Northwest ingredients.  This industrial style brewery located in the Magnolia neighborhood also rotates its beers regularly which guarantees they are utilizing fresh ingredients as well as complex yeast strains.  Urban Family is a small craft brewery that also serves East Coast style IPA’s.</p>
     </div>
     <div id='social'>
         <ul>
