made links go to the pages we have

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -13,8 +13,8 @@
           <h1>Seattle Brewery Finder</h1>
       </div>
       <nav>
-          <a href="">Home</a>
-          <a href="">Finder</a>
+          <a href="..\pages\home.html">Home</a>
+          <a href="..\index.html">Finder</a>
           <a href="">Breweries</a>
           <a href="..\pages\aboutus.html">About Us</a>
       </nav>
