--- a/pages/index.html
+++ b/pages/index.html
@@ -19,6 +19,7 @@
       </nav>
   </header>
   <main>
+        <div id='quiz'></div>
       <div class="checkbox">
           <h3>Are you looking for a brewery that allows children?</h3>
           <form id="kids">
@@ -60,5 +61,8 @@
       <p>&copy Seattle Brewery Finders</p>
   </footer>
   <script src="app.js"></script>
+  <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
+		<script type="text/javascript" src='questions.json'></script>
+		<script type='text/javascript' src='jsquiz.js'></script>
 </body>
 </html>
