attempting to pull data from form

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <h3>
               Are you looking for a brewery that allows pets?
           </h3>
-          <form id="amen-list">
+          <form id="pets">
             <input type="radio" name="pets" value="yes"><label>Yes</label>
             <input type="radio" name="pets" value="no"><label>No</label>
           </form>
@@ -54,7 +54,7 @@
             <input type="radio" name="event" value="no"><label>No</label>
           </form>
       </div>
-      <button type="search">Start Brewing!</button>
+      <button id="blah" type="submit">Start Brewing!</button>
   </main>
   <footer>
       <p>&copy Seattle Brewery Finders</p>
