random links to HTML

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <title>Seattle Brewery Finder</title>
-  <link rel="stylesheet" type="text/css" href="css/index.css" />
   <!-- <link rel="stylesheet" type="text/css" href="css/reset.css" /> -->
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
 <body>
     <div class="wrapper">
@@ -73,9 +73,9 @@
         <aside>
             <section class="popular-recipes">
                 <h2>Popular Events</h2>
-                <a href="">Dungeons & Dragons</a>
-                <a href="">Brew Tasting in Seattle</a>
-                <a href="">Brewery of the Week</a>
+                <a href="https://untappd.com/b/hellbent-brewing-company-capo-s-choice-amber/2516866">Capo's Choice Amber</a>
+                <a href="https://untappd.com/b/hellbent-brewing-company-moon-tower-stout/1129013">Moon Tower Stout</a>
+                <a href="http://www.seattlebeerweek.com/news">Seattle Beer Week News</a>
                 <a href="">Brew Specials</a>
             </section>
             <section class="contact-details">
