--- a/pages/home.html
+++ b/pages/home.html
@@ -22,8 +22,8 @@
     <div id="popup">
         <h3>Are you 21 or older?</h3>
         <p>Please select one of the options below.</p>
-        <button id="older" type="submit" onclick="shopPop">Yes</button>
-        <button id="young" type="submit" onclick="tooYoung">No</button>
+        <button id="older" type="submit">Yes</button>
+        <button id="young" type="submit">No</button>
       </div>
       <a href="https://placeholder.com"><img src="http://via.placeholder.com/1150x350"></a>
       <h2>Seattle Brewery Finder</h2>
@@ -35,6 +35,6 @@
   <footer>
     <p>&copy Seattle Brewery Finders</p>
   </footer>
-  <script src = "app.js"></script>
+  <script src = "../app.js"></script>
 </body>
 </html>
