tried for age, didnt work right

--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
 <html>
+        <div class="age" id="verify"> 
+                <div><img src="/image/white.png"></img></div>
+                <div id="noman">ARE YOU OVER 21?</div>
+                <!-- <div> 
+                  <p> If not, leave now and we wont tell your mom.
+                    </br>  By continuing you agree you are 18 or older.
+                  </p>
+                </div> -->
+                <div id="YN">
+                  <a href="javascript:redirect(window.location.href);" id="old">Yes</a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="http://www.poo.com" rel="nofollow" id="young">No</a>
+                </div>
+            </div>
 <head>
   <meta charset="utf-8" />
   <title>Seattle Brewery Finder</title>
