started on nav bar work, nested list

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="" class="current">Home</a></li>
                     <li><a href="">Map</a></li>
-                    <li><a href="">Brewerys</a></li>
+                    <li><a href="">Breweries</a></li>
                     <li><a href="">About Us</a></li>
                 </ul>
             </nav>
