--- a/pages/home.html
+++ b/pages/home.html
@@ -12,10 +12,75 @@
           <h1>Seattle Brewery Finder</font></h1>
       </div>
       <nav>
-          <a href="">Home</a>
-          <a href="">Map</a>
+          <a href="home.html">Home</a>
+          <a href="../index.html">Finder</a>
           <a href="">Breweries</a>
-          <a href="">About Us</a>
+          <ul>
+            <li>
+              <a href="">Ballard</a>
+              <ul>
+                <li><a href="peddler.html">Peddler Brewing</a></li>
+                <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                <li><a href="reubens.html">Reuben's Brews</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="">Capitol Hill</a>
+              <ul>
+                <li><a href="optimism.html">Optimism Brewing</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="">Central District</a>
+              <ul>
+                <li><a href="standard.html">Standard Brewing</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="">Fremont</a>
+              <ul>
+                <li><a href="fremont.html">Fremont Brewing</a></li>
+                <li><a href="outlander.html">Outlander Brewing</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="">Interbay</a>
+              <ul>
+                <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="">Lake City</a>
+              <ul>
+                <li><a href="hellbent.html">Hellbent Brewing</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="">Magnolia</a>
+              <ul>
+                <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="">Pike Place</a>
+              <ul>
+                <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="">SoDo</a>
+              <ul>
+                <li><a href="twobeers.html">Two Beers Brewing</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="">Ravenna</a>
+              <ul>
+                <li><a href="ravenna.html">Ravenna Brewing</a></li>
+              </ul>
+            </li>
+          </ul>
+          <a href="aboutus.html">About Us</a>
       </nav>
   </header>
   <section>
