completed css for nested nav items

--- a/pages/home.html
+++ b/pages/home.html
@@ -11,10 +11,11 @@
       <div id="logo">
           <h1>Seattle Brewery Finder</font></h1>
       </div>
-      <nav>
-          <a href="home.html">Home</a>
-          <a href="../index.html">Finder</a>
-          <a href="">Breweries</a>
+      <nav id="main_nav">
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="../index.html">Finder</a></li>
+          <li><a href="">Breweries</a>
           <ul>
             <li>
               <a href="">Ballard</a>
@@ -80,7 +81,9 @@
               </ul>
             </li>
           </ul>
-          <a href="aboutus.html">About Us</a>
+          </li>
+          <li><a href="aboutus.html">About Us</a></li>
+        </ul>
       </nav>
   </header>
   <section>
