completed cloudburst description & image

--- a/pages/cloudburst.html
+++ b/pages/cloudburst.html
@@ -20,9 +20,9 @@
   </header>
   <section>
     <div id='breweryInfo'>
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
+      <img src="../images/brewImages/cloudburst.png"></a>
       <h2>Cloudburst Brewing</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
+      <p>Just weeks after Elysian Brewing was purchased by Anheuser-Busch, veteran brewer Steve Luke left his long time position with Elysian to branch off and start Cloudburst Brewing. Cloudburst Brewing sports a no-frills brewery and taproom in the heart of Seattle, serving as a landing spot for beer aficionados to try some of the most well crafted beers the city of Seattle has to offer. Cloudburst offers a limited selection of pre-filled growlers, otherwise you will only find their beers on tap at various establishments. Probably best known for their IPAs, Steve’s dedication to the craft has built quite a reputation for the still relatively young brewery.</p>
     </div>
     <div id='social'>
         <ul>
