--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         </header>
         <section class="courses">
             <article>
-                <figure>
+                <marquee behavior="scroll" definition: "left">
+                    <img src="images/brewImages/beerfood.jpg"width="260"/>
+                    <img src="images/brewImages/beerfood.jpg"width="260"/>
+                    <img src="images/brewImages/beerfood.jpg"width="260"/>
+                </marquee>
                     <img src="images/brewImages/beerfood.jpg" alt="Beer & Food" width="260"/>
                     <figcaption>Enjoy a tasty meal!</figcaption>
                 </figure>
